Update and rename main.yml to dogs app.yml
pushing the image to right repository (dogs)

--- a/.github/workflows/dogs app.yml
+++ b/.github/workflows/dogs app.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Build, test, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: project1-cats
+        ECR_REPOSITORY: project1-dogs
         IMAGE_TAG: v0.1
       run: |
         cd cats
