--- a/.github/workflows/dogs app.yml
+++ b/.github/workflows/dogs app.yml
@@ -31,7 +31,7 @@ jobs:
         ECR_REPOSITORY: project1-dogs
         IMAGE_TAG: v0.1
       run: |
-        cd cats
+        cd dogs
         ls -ltra
         # Docker build
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
